# agents-integration-patterns

./: .gitignore  COMPARISON.md  CONTRIBUTING.md  LICENSE  README.md  README.pt.md  ROADMAP.md
patterns/: FAILURE-MAP.md  FORCES.md  TRANSPORT.md  _template.md
patterns/context/: context-injection.md  tool-provider.md
patterns/coordination/: choreography.md  group-chat.md  magentic.md  mediator.md  orchestrator.md  peer-to-peer-delegation.md  saga.md  supervised-delegation.md
patterns/discovery/: agent-card-registry.md  agent-proxy.md  broker.md
patterns/evaluation/: ensemble-judge.md  llm-as-judge.md  reflection-loop.md
patterns/implementation/: exception-handler-chain.md  idempotent-agent.md
patterns/messaging/: blackboard.md  broadcast-message.md  direct-message.md
patterns/resilience/: checkpoint-resume.md  circuit-breaker.md  dead-letter-agent.md  exception-handler-chain.md  idempotent-agent.md
patterns/routing/: content-based-router.md  pipeline.md  scatter-gather.md
patterns/security/: least-privilege-tool-scope.md  prompt-firewall.md  trust-boundary.md
samples/: README.md
samples/csharp/: AgentPatterns.sln
samples/go/: go.mod
samples/go/cmd/: main.go
samples/go/context/: context_injection.go  tool_provider.go
samples/go/coordination/: choreography.go  group_chat.go  magentic.go  mediator.go  orchestrator.go  peer_to_peer_delegation.go  saga.go  supervised_delegation.go
samples/go/discovery/: agent_card_registry.go  agent_proxy.go  broker.go
samples/go/evaluation/: ensemble_judge.go  llm_as_judge.go  reflection_loop.go
samples/go/implementation/: idempotent_agent.go
samples/go/messaging/: blackboard.go  broadcast_message.go  direct_message.go
samples/go/resilience/: checkpoint_resume.go  circuit_breaker.go  dead_letter_agent.go
samples/go/routing/: content_based_router.go  pipeline.go  scatter_gather.go
samples/go/security/: least_privilege_tool_scope.go  prompt_firewall.go  trust_boundary.go
samples/go/shared/: fake_agent.go
samples/java/: pom.xml
samples/python/: requirements.txt
samples/rust/: Cargo.toml
samples/rust/examples/: context_context_injection.rs  context_tool_provider.rs  coordination_choreography.rs  coordination_group_chat.rs  coordination_magentic.rs  coordination_mediator.rs  coordination_orchestrator.rs  coordination_peer_to_peer_delegation.rs  coordination_saga.rs  coordination_supervised_delegation.rs  discovery_agent_card_registry.rs  discovery_agent_proxy.rs  discovery_broker.rs  evaluation_ensemble_judge.rs  evaluation_llm_as_judge.rs  evaluation_reflection_loop.rs  implementation_idempotent_agent.rs  messaging_blackboard.rs  messaging_broadcast_message.rs  messaging_direct_message.rs  resilience_checkpoint_resume.rs  resilience_circuit_breaker.rs  resilience_dead_letter_agent.rs  routing_content_based_router.rs  routing_pipeline.rs  routing_scatter_gather.rs  security_least_privilege_tool_scope.rs  security_prompt_firewall.rs  security_trust_boundary.rs
samples/rust/src/: lib.rs
samples/typescript/: package-lock.json  package.json  tsconfig.json
(+163 files in other folders)
